--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -17,9 +17,9 @@
   height: 100%;
 }
 
-.header .logo span {
+/* .header .logo span {
   color: gray;
   font-size: 12px;
   font-weight: 500;
   padding-left: 10px;
-}
+} */
