--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
-.App {
+.container {
   display: flex;
   flex-direction: column;
+  gap: 10px;
 }
 
-.App button {
-  width: 100px;
+.container-form form {
+  margin-top: 60px;
+  margin-left: 20px;
+}
+
+.btn-search {
+  margin-top: 10px;
+  padding: 8px 18px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: black 1px solid;
+}
+
+.listbox-container {
+  margin-top: 10px;
 }
